--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="hero-title mb-4">Bharatkumar Here</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Web Developer,Project Coordinator, Data Analyst, Freelancer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Web Developer,Open Source Contributor, Project Management, Freelancer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
