--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
             <div class="credits">
              <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                       <!-- <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li> -->
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/bharat-chandvani"><span class="ico-circle"><i class="bi bi-linkedin"> </i></span></a></li>
                       </ul>
