--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                         Let's create something extraordinary together.
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span>                                          38 Southampton Drive,Toronto, Ontario </li>
+                        <li><span class="bi bi-geo-alt"></span>                                          Victoria, BC </li>
                         <li><span class="bi bi-phone"></span>                                           +1(647-549-6019)</li>
                         <li><span class="bi bi-envelope"></span>                                         chandvanibharat@gmail.com</li>
                       </ul>
