--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
                         Let's create something extraordinary together.
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span>                                          Victoria, BC </li>
-                        <li><span class="bi bi-phone"></span>                                           +1(647-549-6019)</li>
+                        <li><span class="bi bi-geo-alt"></span>                                          CANADA</li>
+                        <li><span class="bi bi-phone"></span>                                            +1(647-549-6019)</li>
                         <li><span class="bi bi-envelope"></span>                                         chandvanibharat@gmail.com</li>
                       </ul>
                     </div>
