--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Bharatkumar Chandvani</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Front End developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
                         <p><span class="title-s">Email: </span> <span>ChandvaniBharat@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(647)-549-6019</span></p>
                       </div>
