--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Front End Development</h2>
+                <h2 class="s-title">Full Stack Development</h2>
                 <p class="s-description text-center">
                  
                 </p>
