--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Project Management</h2>
+                <h2 class="s-title">AI Prompt Egineer</h2>
                 <p class="s-description text-center">
                   
                 </p>
